# bluemouse

./: .gitignore  BlueMouse_v6.1_MASTER_ARCH.md  COMMERCIAL_REALITY_CHECK.md  COMMERCIAL_ROADMAP.md  Dockerfile  LICENSE  MCP_DIRECTORY_SUBMISSION_STEPS.md  MCP_SUBMISSION_GUIDE.md  README.md  STATUS_REPORT_v6.0.md  Start  Start.bat  USAGE_GUIDE.md  add_to_cursor.py  advanced_error_generator.py  ai_integration.py  antigravity_code_generator.py  antigravity_inline_generator.py  asset_pipeline.py  batch_error_generator.py  bluemouse_saas.html  code_generator.py  cost_estimator.py  critic_agent.py  data_collector.py  data_logger.py  data_processing.py  day4_github_collector.py  day5_collector.py  day6_final_sprint.py  demo_output.json  deployment_scan.py  diagram_generator.py  django_generator.py  environment_detector.py  error_generator.py  error_pattern_analyzer.py  financial_functions.py  game_ai.py  github_collector.py  (+54 more)
.smithery/shttp/: module.js  module.js.map
archive/: api_server_v2.py
docs/reports/: STATUS_REPORT_v6.1.md
docs/strategy/: LAUNCH_DAY_SCRIPT.md  USER_JOURNEY_SIMULATION.md
security_tools/: ultimate_parasite_ai.py
tests/: test_antarctica_simulation.py  verify_dynamic_logic.py
