[project]
name = "blueprint-little-mouse"
version = "6.0.0"
description = "Stop Vibe Coding. Global logic sovereignty architecture tool."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "BlueMouse Team", email = "architect@bluemouse.io" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.23.0",
    "fastapi>=0.100.0",
    "websockets>=11.0",
    "anthropic>=0.7.0",
    "psutil>=5.9.0",
    "requests>=2.31.0"
]

[project.scripts]
bluemouse = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
